--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <!-- Contenido del primer HTML -->
     <div id="content1" align-items: center>
         <div class="greetings">
+            <span>L</span>
+            <span>U</span>
+            <span>D</span>
             <span>M</span>
             <span>I</span>
-            <span>C</span>
-            <span>A</span>
-            <span>E</span>
             <span>L</span>
             <span>A</span>
         </div>
@@ -52,7 +52,7 @@
             <span></span>
         </div>
         <div class="description">
-            <span>Tengo un regalo para  TI ESPERO QUE TE GUSTE MICA !!</span>
+            <span>Tengo un regalo para  TI ESPERO QUE TE GUSTE AMOR !!</span>
         </div>
         <div id="pantalla1" class="button">
             <button id="BotonCambiar" onclick="showContent2()">Haga Clic</button>
